# spero

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
adr/: 0001-tier-b-brokered-bastion.md
deploy/: spero.service
deploy/k8s/: README.md
deploy/k8s/base/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  serviceaccount.yaml
deploy/k8s/overlays/acting/: clusterrole.yaml  clusterrolebinding.yaml  kustomization.yaml
docs/: PORT_MAP.md
policies/: elpio-experiment.yaml  example.yaml  keda-experiment.yaml  knative-experiment.yaml  rightsizing-experiment.yaml
scripts/: gen_screenshots.py
src/spero/: __init__.py  agent.py  cli.py  config.py  dashboard.py  owner.py  tui.py  ui.py
src/spero/ai/: __init__.py  approver.py  diagnose.py  llm.py  predict.py  query.py  redact.py
src/spero/alerting/: __init__.py  base.py  email.py  slack.py  webhook.py
src/spero/api/: __init__.py  app.py  auth.py  supervisor.py
src/spero/core/: __init__.py  engine.py  inspect.py  models.py  policy.py  shell.py  watch.py
src/spero/probes/: __init__.py  base.py  datainfra.py  elpio.py  host.py  keda.py  knative.py  kubernetes.py  resources.py
src/spero/providers/: __init__.py  base.py  command.py  host.py  kubernetes.py
src/spero/remediations/: __init__.py  base.py  host.py  keda.py  kubernetes.py
src/spero/store/: __init__.py  db.py  models.py
tests/: _fakes.py  test_agent.py  test_ai.py  test_alerters.py  test_api.py  test_auth.py  test_cert_expiry_probe.py  test_cli.py  test_command.py  test_command_failures.py  test_datainfra.py  test_elpio.py  test_email.py  test_engine.py  test_host_provider.py  test_inspect.py  test_keda_seam.py  test_knative.py  test_kubernetes.py  test_owner.py  test_policy.py  test_policy_validation.py  test_probes.py  test_provider_parsing.py  test_pvc_probe.py  test_redact.py  test_remediations.py  test_resources.py  test_restart_count.py  test_rightsizing.py  test_shell.py  test_store.py  test_supervisor.py  test_tui.py  test_watch.py
